--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,7 +22,7 @@ jobs:
     - uses: terraform-linters/setup-tflint@v2
       name: Setup TFLint
       with:
-        tflint_version:  0.40.0
+        tflint_version:  "0.40.0"
 
     - name: Show version
       run: tflint --version
